# mikrosim

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  LICENSE.md  README.md
doc/src/: main.typ
src/: app.cpp  app.hpp  cell.cpp  cell.hpp  cmake_defs.hpp  cmake_defs.hpp.in  compounds.cpp  compounds.hpp  defs.hpp  imgui_impl.cpp  main.cpp  parse.cpp  parse.hpp  particles.cpp  particles.hpp  protein.cpp  protein.hpp  util.cpp  util.hpp  views.cpp  views.hpp  vulkan_glfw_pch.hpp
src/format/: defs.hpp  qoi.cpp  qoi.hpp
src/input/: input.cpp  input.hpp
src/log/: log.hpp
src/rendering/: 2d.cpp  2d.hpp  buffers.cpp  buffers.hpp  compute.hpp  context.cpp  context.hpp  defs.hpp  device.cpp  device.hpp  pipeline.cpp  pipeline.hpp  preset.cpp  preset.hpp  renderer.hpp  screen.hpp  text.cpp  text.hpp  timestamp.cpp  timestamp.hpp  vma_wrap.cpp  vma_wrap.hpp  window.cpp  window.hpp
src/scripts/: 2d_shader_data.py  cstr.py  font_ascii_atlas_data_qoi.py  inj_2d.sh  inj_font_atlas.sh  injector.py
src/scripts/2d_shaders/: circle.frag  solid.frag  text.frag  textured.frag  v2d.vert
src/scripts/font/: fira_mono.csv
src/shaders/: count.comp  density.comp  downsweep.comp  particle.frag  particle.vert  report.comp  settings.glsl.in  update.comp  upsweep.comp  write.comp
